@@ -6,7 +6,7 @@ qt-default-template=Default template that will be applied at the start of a new 
 
 [qt-gui]
 export=Export quickbar template
-import=Import quickbar template\nHold shift to ignore empty slots
+import=Import quickbar template\nHold shift to ignore empty filters
 
 [qt-message]
 invalid-blueprint=Invalid quickbar template blueprint!
